centjes-gen/test_resources/register/valid/gap.cent
currency USD 0.01

account equity
account assets
account expenses

2023-12-16
  | opening
  * equity -10 USD
  * assets +10 USD

2023-12-17
  | Coffee
  * assets   -1 USD
  * expenses +1 USD

2024-12-17
  | Coffee
  * assets   -1 USD
  * expenses +1 USD
