centjes-gen/test_resources/register/error/RE_ADD_ERROR.cent
currency USD 0.01

account assets
account income

2023-12-15
  * assets +184467440737095516.15 USD
  * income -184467440737095516.15 USD

2023-12-16
  * assets +1.00 USD
  * income -1.00 USD
